--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
-    "node-sass": "^5.0.0"
+    "node-sass": "^5.0.0",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
